# Ascribe

./: .gitignore  README.md  line_counter.py  package-lock.json  package.json  tsconfig.json  vite.config.ts
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/resources/biblio-json-pkg/: biblio-json.toml
src-tauri/resources/biblio-json-pkg/bibles/: asv.toml  kjv.toml
src-tauri/resources/biblio-json-pkg/commentaries/: adam-clarke-commentary.toml  asv-footnotes.jsonl  asv-footnotes.toml  bsb-footnotes.jsonl  bsb-footnotes.toml  kjav-footnotes.jsonl  kjav-footnotes.toml  matthew-henry-commentary.toml  tntc-footnotes.jsonl  tntc-footnotes.toml  tyndale-commentary.toml
src-tauri/resources/biblio-json-pkg/cross_references/: open_xrefs.toml
src-tauri/resources/biblio-json-pkg/dictionaries/: easton_bible_dictionary.jsonl  easton_bible_dictionary.toml  hbnd.jsonl  hbnd.toml
src-tauri/resources/biblio-json-pkg/readings/: bible_in_one_year.jsonl  bible_in_one_year.toml  proverbs_monthly.jsonl  proverbs_monthly.toml  robert_roberts.jsonl  robert_roberts.toml
src-tauri/resources/tts-data/voices/: voice_name_map.json
src-tauri/src/: commands.rs  lib.rs  main.rs  search_parsing.rs  sfx.rs
src-tauri/src/bible/: bible_cmd.rs  bible_command.rs  book.rs  fetching.rs  mod.rs  printing.rs  ref_id_parsing.rs  render.rs  repr.rs
src-tauri/src/core/: app.rs  app_language.rs  color.rs  mod.rs  settings.rs  theme.rs  utils.rs  view_history.rs
src-tauri/src/reader/: mod.rs  reader_cmd.rs
src-tauri/src/repr/: bible_print_range.rs  chapter.rs  entry.rs  html_text.rs  lang.rs  mod.rs  module_config.rs  module_info.rs  print_bible_range.rs  readings_date.rs  ref_id.rs  searching.rs  strongs.rs  tts.rs  verse.rs
src-tauri/src/searching/: context.rs  mod.rs  module_searching.rs  search_engine.rs  search_phrase.rs  search_range.rs  search_type.rs  word_search_engine.rs  word_search_parsing.rs
src-tauri/src/tts/: events.rs  gen_thread.rs  mod.rs  player.rs  player_behavior.rs  player_thread.rs  synth.rs  tts_cmd.rs  voice_library.rs  voices.rs
(+275 files in other folders)
