[package]
name = "ascribe"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "ascribe_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4.28"
tauri-plugin-log = "2.7.0"
itertools = "0.14.0"
biblio_json = { git = "https://github.com/FishArmy100/biblio_json", branch = "ascribe-html-update" }
regex = "1.11.3"
lazy_static = "1.5.0"
rayon = "1.11.0"
piper-rs = { git = "https://github.com/FishArmy100/piper-rs" }
kira = "0.10.5"
uuid = { version = "1.18.1", features = ["v4"] }
kira-pitcher = "0.1.0"
open = "5.3.3"
